feat: implement model info api

--- a/rust-server/Dockerfile
+++ b/rust-server/Dockerfile
@@ -1,7 +1,10 @@
-# Multi-stage build for Rust LLM Proxy
+# syntax=docker/dockerfile:1.4
+# Multi-stage build for Rust LLM Proxy with cargo-chef for dependency caching
 
-# Build stage - Use Tesla Rust Bookworm image with build tools
-FROM atm-base.artifactory.teslamotors.com/rust:1.85-bookworm AS builder
+# =============================================================================
+# Stage 1: Chef base - Install cargo-chef and configure mirrors
+# =============================================================================
+FROM atm-base.artifactory.teslamotors.com/rust:1.85-bookworm AS chef
 
 # Copy and use China mirror sources
 COPY debian-cn-sources.list /etc/apt/sources.list.d/debian.sources
@@ -15,38 +18,64 @@ RUN apt-get update && \
     apt-get install -y pkg-config libssl-dev && \
     rm -rf /var/lib/apt/lists/*
 
-
-
 # Set up Cargo config to use tesla-mirrors as crates.io replacement
 RUN mkdir -p ${CARGO_HOME:-/usr/local/cargo} && \
-    printf '[source.crates-io]\nreplace-with = "tesla-mirrors"\n\n[source.tesla-mirrors]\nregistry = "sparse+https://mirrors.tesla.cn/cargo/index/"\n' > ${CARGO_HOME:-/usr/local/cargo}/config.toml && \
-    cat ${CARGO_HOME:-/usr/local/cargo}/config.toml
+    printf '[source.crates-io]\nreplace-with = "tesla-mirrors"\n\n[source.tesla-mirrors]\nregistry = "sparse+https://mirrors.tesla.cn/cargo/index/"\n' > ${CARGO_HOME:-/usr/local/cargo}/config.toml
+
+# Install cargo-chef for dependency caching
+RUN --mount=type=cache,target=/usr/local/cargo/registry \
+    --mount=type=cache,target=/usr/local/cargo/git \
+    cargo install cargo-chef --locked
 
 WORKDIR /app
 
-# Also create project-level cargo config as backup
-RUN mkdir -p .cargo && \
-    printf '[source.crates-io]\nreplace-with = "tesla-mirrors"\n\n[source.tesla-mirrors]\nregistry = "sparse+https://mirrors.tesla.cn/cargo/index/"\n' > .cargo/config.toml
+# =============================================================================
+# Stage 2: Planner - Generate dependency recipe
+# =============================================================================
+FROM chef AS planner
 
-# Copy manifests (include Cargo.lock to avoid re-resolving dependencies)
 COPY Cargo.toml Cargo.lock ./
-
-# Copy benches directory (needed by Cargo.toml)
+COPY src ./src
 COPY benches ./benches
 
+# Generate recipe.json containing dependency information
+RUN cargo chef prepare --recipe-path recipe.json
+
+# =============================================================================
+# Stage 3: Builder - Build dependencies then source code
+# =============================================================================
+FROM chef AS builder
+
+# Copy recipe from planner
+COPY --from=planner /app/recipe.json recipe.json
+
+# Build dependencies only (this layer is cached if dependencies don't change)
+RUN --mount=type=cache,target=/usr/local/cargo/registry \
+    --mount=type=cache,target=/usr/local/cargo/git \
+    --mount=type=cache,target=/app/target \
+    cargo chef cook --release --recipe-path recipe.json
+
 # Copy source code
+COPY Cargo.toml Cargo.lock ./
 COPY src ./src
+COPY benches ./benches
 
-# Build release binary
-RUN cargo build --release
+# Build the application (only recompiles changed source files)
+RUN --mount=type=cache,target=/usr/local/cargo/registry \
+    --mount=type=cache,target=/usr/local/cargo/git \
+    --mount=type=cache,target=/app/target \
+    cargo build --release && \
+    cp /app/target/release/llm-proxy-rust /app/llm-proxy-rust
 
-# Runtime stage - Use Tesla Rust Bookworm image
-FROM atm-base.artifactory.teslamotors.com/rust:1.85-bookworm
+# =============================================================================
+# Stage 4: Runtime - Minimal image for running the binary
+# =============================================================================
+FROM atm-base.artifactory.teslamotors.com/rust:1.85-bookworm AS runtime
 
 WORKDIR /app
 
 # Copy binary from builder
-COPY --from=builder /app/target/release/llm-proxy-rust /usr/local/bin/llm-proxy-rust
+COPY --from=builder /app/llm-proxy-rust /usr/local/bin/llm-proxy-rust
 
 # Expose port
 EXPOSE 18000
