--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -108,8 +108,8 @@ criterion = { version = "0.5", features = ["html_reports"] }
 
 [profile.release]
 opt-level = 3
-lto = true
-codegen-units = 1
+lto = "thin"
+codegen-units = 16
 strip = true
 
 [profile.test]
