feat: unify token calculation with OutboundTokenCounter
- Add OutboundTokenCounter component for unified V1/V2 token calculation
- Add HuggingFace tokenizer support for Claude models
- Embed anthropic_tokenizer.json for offline Claude token counting
- Refactor streaming handlers to use OutboundTokenCounter
- Add shared utility functions (utils.rs, utils.py)
- Enhance V2 API proxy with improved authentication and error handling
- Add comprehensive tests for tokenizer and token counter
- Add V2 auth integration tests (Rust)

Python Server:
- New: token_counter.py, tokenizer.py, utils.py
- New: tokenizers/anthropic_tokenizer.json
- Modified: streaming.py, proxy.py, completions.py
- Tests: test_tokenizer.py, test_token_counter.py, test_utils.py

Rust Server:
- New: token_counter.rs, tokenizer.rs, utils.rs
- New: tokenizers/anthropic_tokenizer.json
- Modified: streaming.rs, proxy.rs, handlers.rs
- Tests: test_tokenizer.rs, test_v2_auth.rs

--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -25,3 +25,11 @@ c265ac4ce2b5e8b29b61bd37af7a803de61bd9b7:scripts/verify_auth.sh:curl-auth-header
 c28031f8cd21988acec11c9cd41277a39035a1c0:python-server/README.md:curl-auth-header:181
 c28031f8cd21988acec11c9cd41277a39035a1c0:python-server/README_CN.md:curl-auth-header:169
 c28031f8cd21988acec11c9cd41277a39035a1c0:python-server/README_CN.md:curl-auth-header:181
+
+# STREAMING_USAGE_FIX.md - example API keys for documentation
+d8fdd6f3d8903df2abdc4cd50e4c38fc5d05f10e:STREAMING_USAGE_FIX.md:generic-api-key:27
+d8fdd6f3d8903df2abdc4cd50e4c38fc5d05f10e:STREAMING_USAGE_FIX.md:generic-api-key:370
+d8fdd6f3d8903df2abdc4cd50e4c38fc5d05f10e:STREAMING_USAGE_FIX.md:curl-auth-header:15
+d8fdd6f3d8903df2abdc4cd50e4c38fc5d05f10e:STREAMING_USAGE_FIX.md:curl-auth-header:25
+d8fdd6f3d8903df2abdc4cd50e4c38fc5d05f10e:STREAMING_USAGE_FIX.md:curl-auth-header:350
+d8fdd6f3d8903df2abdc4cd50e4c38fc5d05f10e:STREAMING_USAGE_FIX.md:curl-auth-header:368
