--- a/python-server/pyproject.toml
+++ b/python-server/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "loguru>=0.7.0",
     "limits>=3.10.0",
     "tiktoken>=0.5.0",
+    "tokenizers>=0.15.0",
     "sqlalchemy[asyncio]>=2.0.25",
     "asyncpg>=0.30.0",
     "langfuse>=2.0.0",
