--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -57,9 +57,12 @@ nonzero_ext = "0.3"
 
 # Token counting
 tiktoken-rs = "0.5"
+# HuggingFace tokenizers for Claude/Cohere/Llama models
+tokenizers = { version = "0.21", features = ["http"] }
 
 # Lazy static initialization
 lazy_static = "1.4"
+once_cell = "1.19"
 
 # Database (PostgreSQL)
 sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }
