--- a/web/react-admin/package.json
+++ b/web/react-admin/package.json
@@ -18,6 +18,7 @@
     "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.513.0",
     "marked": "^17.0.1",
+    "mermaid": "^11.12.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.6.1",
