--- a/web/svelte-admin/package.json
+++ b/web/svelte-admin/package.json
@@ -41,6 +41,7 @@
     "highlight.js": "^11.11.1",
     "isomorphic-dompurify": "^2.35.0",
     "lucide-svelte": "^0.468.0",
-    "marked": "^17.0.1"
+    "marked": "^17.0.1",
+    "mermaid": "^11.12.2"
   }
 }
