feat: add adaptive provider routing with circuit breaker and unified upstream module
Implement runtime adaptive routing that dynamically adjusts provider
weights based on 429/5xx/transport errors with circuit breaker state
machine (closed → open → half_open → closed). Extract unified upstream
request helpers to eliminate duplicated transport/status handling across
all route handlers (chat, claude, gcp_vertex, proxy_v2).

Also fix pre-commit hook clippy pipe truncation bug.

--- a/rust-server/.env.example
+++ b/rust-server/.env.example
@@ -59,3 +59,46 @@ LOG_LEVEL=info
 
 # Enable debug logging for Langfuse (default: false)
 # LANGFUSE_DEBUG=false
+
+# =============================================================================
+# ADAPTIVE ROUTING (OPTIONAL)
+# =============================================================================
+
+# Enable adaptive provider routing with circuit breaker (default: false)
+# ADAPTIVE_ROUTING_ENABLED=false
+
+# Minimum weight multiplier when provider is penalized (default: 0.05)
+# ADAPTIVE_MIN_MULTIPLIER=0.05
+
+# Weight factor during half-open probe state (default: 0.2)
+# ADAPTIVE_HALF_OPEN_WEIGHT_FACTOR=0.2
+
+# Multiplier recovery increment per success (default: 0.1)
+# ADAPTIVE_SUCCESS_RECOVERY_STEP=0.1
+
+# Slow-start window in seconds after recovery (default: 60)
+# ADAPTIVE_SLOW_START_WINDOW_SECS=60
+
+# Consecutive 429 errors before circuit opens (default: 3)
+# ADAPTIVE_429_THRESHOLD=3
+
+# Consecutive 5xx errors before circuit opens (default: 5)
+# ADAPTIVE_5XX_THRESHOLD=5
+
+# Consecutive transport errors before circuit opens (default: 4)
+# ADAPTIVE_TRANSPORT_THRESHOLD=4
+
+# Successes needed in half-open to close circuit (default: 2)
+# ADAPTIVE_HALF_OPEN_SUCCESS_THRESHOLD=2
+
+# Base cooldown for 429 rate limit in seconds (default: 15)
+# ADAPTIVE_BASE_429_COOLDOWN_SECS=15
+
+# Max cooldown for 429 rate limit in seconds (default: 300)
+# ADAPTIVE_MAX_429_COOLDOWN_SECS=300
+
+# Base circuit-open duration in seconds (default: 30)
+# ADAPTIVE_BASE_OPEN_DURATION_SECS=30
+
+# Max circuit-open duration in seconds (default: 300)
+# ADAPTIVE_MAX_OPEN_DURATION_SECS=300
