refactor: genericize Dockerfiles to use public base images
Replace Tesla-internal registry images with public equivalents
and add .gitignore rules for Tesla-specific files.

--- a/.gitignore
+++ b/.gitignore
@@ -68,5 +68,10 @@ k8s/
 **/config.yaml
 **/config.*.yaml
 
+# Tesla-specific files (internal builds)
+**/build.sh
+**/Dockerfile.tesla
+**/debian-cn-sources.list
+
 **/Claude.md
 **/Agents.md
