--- a/web/react-admin/Dockerfile
+++ b/web/react-admin/Dockerfile
@@ -1,18 +1,7 @@
-# Stage 1: Install bun
-# Reference: https://github.tesla.cn/ITApp/base-images
-FROM cndevops-base-docker-local.arf.tesla.cn/base/node:22 AS bun-installer
+# Stage 1: Build
+FROM node:22-alpine AS builder
 
-# Install bun as root user
-USER root
-RUN npm install -g bun --registry=https://mirrors.tesla.cn/npm/
-
-# Stage 2: Builder stage - Build the application
-FROM cndevops-base-docker-local.arf.tesla.cn/base/node:22 AS builder
-
-# Copy bun from the bun-installer stage
-USER root
-COPY --from=bun-installer /usr/local/bin/bun /usr/local/bin/bun
-COPY --from=bun-installer /usr/local/lib/node_modules/bun /usr/local/lib/node_modules/bun
+RUN npm install -g bun
 
 WORKDIR /app
 
@@ -32,8 +21,8 @@ ENV VITE_CHAT_VISION_MODEL_ALLOWLIST=${VITE_CHAT_VISION_MODEL_ALLOWLIST}
 
 RUN bun run build
 
-# Stage 3: Runtime stage - Use Node.js with serve for static file serving
-FROM cndevops-base-docker-local.arf.tesla.cn/base/node:22-alpine AS runner
+# Stage 2: Serve
+FROM node:22-alpine AS runner
 
 WORKDIR /app
 
