--- a/web/svelte-admin/Dockerfile
+++ b/web/svelte-admin/Dockerfile
@@ -1,14 +1,7 @@
-# Stage 1: Install bun
-FROM cndevops-base-docker-local.arf.tesla.cn/base/node:20-alpine AS bun-installer
+# Stage 1: Build
+FROM node:20-alpine AS builder
 
-USER root
-RUN npm install -g bun --registry=https://mirrors.tesla.cn/npm/
-
-# Stage 2: Builder stage
-FROM cndevops-base-docker-local.arf.tesla.cn/base/node:20-alpine AS builder
-
-COPY --from=bun-installer /usr/local/bin/bun /usr/local/bin/bun
-COPY --from=bun-installer /usr/local/lib/node_modules/bun /usr/local/lib/node_modules/bun
+RUN npm install -g bun
 
 WORKDIR /app
 
@@ -23,12 +16,10 @@ ENV VITE_PUBLIC_API_BASE_URL=${VITE_PUBLIC_API_BASE_URL}
 ARG PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL=
 ENV PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL=${PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL}
 
-ARG VITE_CHAT_VISION_MODEL_ALLOWLIST=
-ENV VITE_CHAT_VISION_MODEL_ALLOWLIST=${VITE_CHAT_VISION_MODEL_ALLOWLIST}
-
 RUN bun run build
 
-FROM cndevops-base-docker-local.arf.tesla.cn/base/node:20-alpine AS runner
+# Stage 2: Serve
+FROM node:20-alpine AS runner
 
 WORKDIR /app
 
