feat: add per-provider Lua scripting for request/response transformation
Add lua_script column to providers table enabling custom Lua scripts
for request/response/stream-chunk transformation at the provider level.

- DB migration (000009): add lua_script TEXT column to providers
- Rust scripting engine: sandboxed Lua runtime with memory limit (16MB),
  instruction limit (1M), JIT disabled, dangerous globals removed,
  compiled script caching with rollback on reload failure
- Python scripting engine: lupa-based Lua runtime with matching sandbox
  constraints, stream chunk support, proper dict-to-table conversion
- Admin API: CRUD for lua_script field, validate-script endpoint with
  sanitized error messages
- Pipeline integration: Lua hooks called after built-in transformers
- Web UI (Svelte + React): CodeMirror-based Lua editor with syntax
  highlighting, template insertion, provider detail pages
- Tests: 14 Rust tests, 15 Python tests covering sandbox, engine,
  validation, rollback, and instruction limits

--- a/python-server/pyproject.toml
+++ b/python-server/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "sqlalchemy[asyncio]>=2.0.25",
     "asyncpg>=0.30.0",
     "langfuse>=2.0.0",
+    "lupa>=2.2",
 ]
 
 [project.optional-dependencies]
