--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -74,6 +74,9 @@ arc-swap = "1.7"
 sha2 = "0.10"
 hex = "0.4"
 
+# Lua scripting engine
+mlua = { version = "0.10", features = ["luajit", "vendored", "async", "send", "serialize", "macros", "anyhow"] }
+
 # Time handling
 chrono = { version = "0.4", features = ["serde"] }
 
