--- a/web/react-admin/package.json
+++ b/web/react-admin/package.json
@@ -14,6 +14,10 @@
     "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,css,json,md}\""
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/language": "^6.12.1",
+    "@codemirror/legacy-modes": "^6.5.2",
+    "@uiw/react-codemirror": "^4.25.5",
     "highlight.js": "^11.11.1",
     "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.513.0",
